--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "evergreen-ui": "^6.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
